--- a/JavaScript-Completo-ES6/0405-number-e-math/index.html
+++ b/JavaScript-Completo-ES6/0405-number-e-math/index.html
@@ -5,17 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>0402-prototype</title>
+    <title>0405-string</title>
 </head>
 
 <body>
     <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
+        <li>
+            <span>Sobre</span>
+        </li>
+        <li>
+            <span>Produtos</span>
+        </li>
+        <li>
+            <span>Contato</span>
+        </li>
     </ul>
 
-    <script src="exercicio.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
