--- a/JavaScript-Completo-ES6/0403-native-host-e-user/index.html
+++ b/JavaScript-Completo-ES6/0403-native-host-e-user/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>0402-prototype</title>
+    <title>0403-native-host-e-user</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <li>Item 3</li>
     </ul>
 
-    <script src="exercicio.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
