--- a/projetinhos/nature-travel/html/index.html
+++ b/projetinhos/nature-travel/html/index.html
@@ -7,8 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <title>Nature Travel</title>
 </head>
 
@@ -26,11 +30,175 @@
     <section class="section-apresentacao-bg">
         <div class="container-apresentacao">
             <h5>In nature, nothing is perfect</h5>
-            <h1>And everthing is perfect</h1>
+            <h1>and everything is perfect</h1>
             <a href="#">
                 <p>read more</p>
             </a>
             <img src="../img/mao-cell.png" alt="">
+        </div>
+    </section>
+
+    <h2 class="last-news">Latest news</h2>
+    <section class="section-ultimas-noticias-bg">
+        <div class="itens-post">
+            <img src="../img/foto-grade-01.jpg" alt="Foto montanhas">
+            <h3>POST 1 HEADLINE</h3>
+            <p>Fri Jun 19 2020 | Comments (0)</p>
+        </div>
+        <div class="itens-post">
+            <img src="../img/foto-grade-02.jpg" alt="Praia">
+            <h3>POST 2 HEADLINE</h3>
+            <p>Fri Jun 19 2020 | Comments (0)</p>
+        </div>
+        <div class="itens-post">
+            <img src="../img/foto-grade-03.jpg" alt="Montanha no outono">
+            <h3>POST 3 HEADLINE</h3>
+            <p>Fri Jun 19 2020 | Comments (0)</p>
+        </div>
+    </section>
+
+    <span class="learn-more"><a href="#">
+            <p>learn more</p>
+        </a></span>
+
+    <section class="section-travel">
+
+        <div class="container-bloco-white">
+            <div class="itens-bloco-white">
+                <h1>Travel with us</h1>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit
+                    esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum.</p>
+                <span class="lear-more-01"><a href="#">
+                        learn more
+                    </a></span>
+            </div>
+
+            <div class="imagem-travel">
+                <img src="../img/foto-circulo-01.jpg" alt="Pousada lago das montanhas">
+            </div>
+
+            <span class="circulo-detalhe-travel"></span>
+        </div>
+    </section>
+
+    <section class="section-galeria-opcoes">
+        <span class="span-detalhe-galeria-opcoes"></span>
+        <div class="container-galeria">
+
+            <div class="item-galeria-opcoes">
+                <div class="div-item-galeria">
+                    <svg width="100" height="100">
+                        <circle cx="50" cy="50" r="50" fill="rgba(89, 126, 124, 0.3)" />
+                        <image xlink:href="../img/aviao.svg" x="24" y="25" width="50" height="50" />
+                    </svg>
+                    <p>Flights</p>
+                </div>
+            </div>
+
+            <div class="item-galeria-opcoes">
+                <div class="div-item-galeria">
+                    <svg width="100" height="100">
+                        <circle cx="50" cy="50" r="50" fill="rgba(89, 126, 124, 0.3)" />
+                        <image xlink:href="../img/hotels.svg" x="24" y="25" width="50" height="50" />
+                    </svg>
+                    <p>Hotels</p>
+                </div>
+            </div>
+
+            <div class="item-galeria-opcoes">
+                <div class="div-item-galeria">
+                    <svg width="100" height="100">
+                        <circle cx="50" cy="50" r="50" fill="rgba(89, 126, 124, 0.3)" />
+                        <image xlink:href="../img/travels.svg" x="24" y="25" width="50" height="50" />
+                    </svg>
+                    <p>Transfers</p>
+                </div>
+            </div>
+
+            <div class="item-galeria-opcoes">
+                <div class="div-item-galeria">
+                    <svg width="100" height="100">
+                        <circle cx="50" cy="50" r="50" fill="rgba(89, 126, 124, 0.3)" />
+                        <image xlink:href="../img/activities.svg" x="24" y="25" width="50" height="50" />
+                    </svg>
+                    <p>Activities</p>
+                </div>
+            </div>
+
+            <div class="item-galeria-opcoes">
+                <div class="div-item-galeria">
+                    <svg width="100" height="100">
+                        <circle cx="50" cy="50" r="50" fill="rgba(89, 126, 124, 0.3)" />
+                        <image xlink:href="../img/map-alt-svgrepo-com.svg" x="24" y="25" width="50" height="50" />
+                    </svg>
+                    <p>Hikking</p>
+                </div>
+            </div>
+
+            <div class="item-galeria-opcoes">
+                <div class="div-item-galeria">
+                    <svg width="100" height="100">
+                        <circle cx="50" cy="50" r="50" fill="rgba(89, 126, 124, 0.3)" />
+                        <image xlink:href="../img/atracao.svg" x="24" y="25" width="50" height="50" />
+                    </svg>
+                    <p>Attractions</p>
+                </div>
+            </div>
+
+            <div class="item-galeria-opcoes">
+                <div class="div-item-galeria">
+                    <svg width="100" height="100">
+                        <circle cx="50" cy="50" r="50" fill="rgba(89, 126, 124, 0.3)" />
+                        <image xlink:href="../img/adventures.svg" x="24" y="25" width="50" height="50" />
+                    </svg>
+                    <p>Adventure</p>
+                </div>
+            </div>
+
+            <div class="item-galeria-opcoes">
+                <div class="div-item-galeria">
+                    <svg width="100" height="100">
+                        <circle cx="50" cy="50" r="50" fill="rgba(89, 126, 124, 0.3)" />
+                        <image xlink:href="../img/climbing.svg" x="24" y="25" width="50" height="50" />
+                    </svg>
+                    <p>Climbing</p>
+                </div>
+            </div>
+
+            <div class="item-galeria-opcoes">
+                <div class="div-item-galeria">
+                    <svg width="100" height="100">
+                        <circle cx="50" cy="50" r="50" fill="rgba(89, 126, 124, 0.3)" />
+                        <image xlink:href="../img/cycling.svg" x="24" y="25" width="50" height="50" />
+                    </svg>
+                    <p>Cycling</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="section-diversao">
+        <span class="span-diversao-bg-01"></span>
+        <span class="span-diversao-bg-02"></span>
+        <span class="span-diversao-bg-imagem"></span>
+        <div class="container-diversao-fun">
+            <h1>Do something fun</h1>
+            <p>Auctor eu augue ut lectus arcu. Sit amet tellus cras adipiscing.
+                Malesuada proin libero nunc consequat interdum.
+                Urna porttitor rhoncus dolor purus non enim praesent elementum.</p>
+            <p>Image from <a href="#">Freepik</a></p>
+            <span class="lear-more-01"><a href="#">
+                    read more
+                </a></span>
+        </div>
+        <div class="container-diversao-texto">
+            <p>Vivamus arcu felis bibendum ut tristique et.
+                Habitant morbi tristique senectus et netus et malesuada fames.
+                Sapien eget mi proin sed libero enim sed. Et ultrices neque ornare aenean
+                euismod elementum nisi quis eleifend. </p>
         </div>
     </section>
 </body>
